--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Compound Proto</title>
+    <link href="css/compound-ui.css" rel="stylesheet">
   </head>
-  <body>
-    <h1>Compound Proto</h1>
+  <body class="bg-light">
+    <div class="container">
+
+      <div class="bg-white p-5 my-5 rounded shadow">
+        <h1 class="mb-5">Compound Proto</h1>
+
+        <div class="d-flex flex-wrap">
+       
+          <div>
+             <ul>
+               <li><a href="template/template.html">General template</a></li>
+             </ul>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
   </body>
 </html>
