Update dashboard page

--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
     <div class="container">
 
       <div class="bg-white p-5 my-5 rounded shadow">
-        <h1 class="mb-5">Compound Proto</h1>
+        <h1>Compound Proto</h1>
+        <ul class="mb-5">
+          <li><a href="template/template.html">General template</a></li>
+        </ul>
 
-        <div class="d-flex flex-wrap">
-       
-          <div>
-             <ul>
-               <li><a href="template/template.html">General template</a></li>
-             </ul>
-          </div>
+        <h2>Compound III</h2>
+        <ul>
+          <li>Lend
+            <ul>
+              <li><a href="v3/lend/assets-list.html">Assets list</a></li>
+              <li><a href="v3/lend/assets-list.2.html">Assets list #2</a></li>
+              <li>Lend asset</li>
+            </ul>
+          </li>
+        </ul>
 
-        </div>
+        <ul>
+          <li>Dashboard
+            <ul>
+              <li><a href="v3/dashboard/overview.html">Overview</a></li>
+            </ul>
+          </li>
+        </ul>
 
       </div>
 
