--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Compound Proto</title>
-    <link href="css/compound-ui.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
   </head>
   <body class="bg-light">
     <div class="container">
@@ -29,7 +29,9 @@
         <ul>
           <li>Dashboard
             <ul>
-              <li><a href="v3/dashboard/overview.html">Overview</a></li>
+              <li><a href="v3/dashboard/overview.1.html">Overview #1</a></li>
+              <li><a href="v3/dashboard/overview.2.html">Overview #2</a></li>
+              <li><a href="v3/dashboard/overview.3.html">Overview #3</a></li>
             </ul>
           </li>
         </ul>
