--- a/v3/lend/assets-list.2.html
+++ b/v3/lend/assets-list.2.html
@@ -49,6 +49,7 @@
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li class="nav-item"><a class="nav-link" href="#/"><i class="bi bi-box-arrow-down me-1"></i> Borrow</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#/lend"><i class="bi bi-stars me-1"></i> Lend</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#/claim"><i class="bi bi-suit-heart me-1"></i> Claim</a></li>
                         <li class="nav-item"><a class="nav-link" href="#/dashboard"><i class="bi bi-list-task me-1"></i> Dashboard</a></li>
                     </ul>
                     <hr class="text-primary">
