--- a/v3/dashboard/overview.2.html
+++ b/v3/dashboard/overview.2.html
@@ -49,6 +49,7 @@
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li class="nav-item"><a class="nav-link" href="#/"><i class="bi bi-box-arrow-down me-1"></i> Borrow</a></li>
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="#/lend"><i class="bi bi-stars me-1"></i> Lend</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#/claim"><i class="bi bi-suit-heart me-1"></i> Claim</a></li>
                         <li class="nav-item"><a class="nav-link active" href="#/dashboard"><i class="bi bi-list-task me-1"></i> Dashboard</a></li>
                     </ul>
                     <hr class="text-primary">
@@ -62,20 +63,24 @@
             </div>
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row mb-4">
-                    <div class="col-3">
-                        <div class="bg-body text-center p-3 rounded shadow-sm">
-                            <h2 class="mb-4">Net worth</h2> 
-                            <p class="fs-4">$1000</p>
-                        </div> 
-                    </div>
-                    <div class="col-3">
-                        <div class="bg-body text-center p-3 rounded shadow-sm">
-                            <h2 class="mb-4">Net APR</h2> 
-                            <p class="fs-4">7.3%</p>
-                        </div>  
+                    <div class="col-6">
+                        <div class="d-flex flex-wrap justify-content-between p-3 text-center bg-body rounded shadow-sm">
+                            <div>
+                                <h3>Net worth</h3> 
+                                <p class="fs-4 text-secondary">$1000</p>
+                            </div> 
+                            <div>
+                                <h3>Net APR</h3> 
+                                <p class="fs-4 text-secondary">7.3%</p>
+                            </div>  
+                            <div>
+                                <h3>Rewards</h3> 
+                                <p class="fs-4 text-secondary">0.2</p>
+                            </div>  
+                        </div>
                     </div>
                     <div class="col-6">
-                        <div class="bg-body h-100 p-3 rounded shadow-sm">
+                        <div class="bg-body p-3 rounded shadow-sm">
                             <h2 class="mb-4">Liquidation risk</h2> 
                             <div class="d-flex flex-wrap justify-content-between">
                                 <div class="py-2" style="width: 46%;">
