--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
         <h2>Compound III</h2>
         <ul>
+          <li>Borrow
+            <ul>
+              <li><a href="v3/borrow/borrow.html">Borrow</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <ul>
           <li>Lend
             <ul>
               <li><a href="v3/lend/assets-list.html">Assets list</a></li>
@@ -32,6 +40,7 @@
               <li><a href="v3/dashboard/overview.1.html">Overview #1</a></li>
               <li><a href="v3/dashboard/overview.2.html">Overview #2</a></li>
               <li><a href="v3/dashboard/overview.3.html">Overview #3</a></li>
+              <li><a href="v3/dashboard/overview.3.html">Overview #4</a></li>
             </ul>
           </li>
         </ul>
