--- a/v3/dashboard/overview.3.html
+++ b/v3/dashboard/overview.3.html
@@ -65,28 +65,37 @@
                 <div class="row mb-4">
                     <div class="col-3">
                         <div class="bg-body text-center p-3 rounded shadow-sm">
-                            <h3 class="mb-4">Net worth</h3> 
-                            <p class="fs-4 text-secondary">$1000</p>
+                            <h2 class="mb-3">Net worth</h2> 
+                            <div class="text-center text-secondary fs-1">$1000</div>
                         </div> 
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <div class="bg-body text-center p-3 rounded shadow-sm">
-                            <h3 class="mb-4">Rewards</h3> 
-                            <p class="fs-4 text-secondary">0.14</p>
+                            <h3 class="mb-3">Net APR</h3> 
+                            <div class="text-center text-secondary fs-4">7.3%</div>
                         </div>  
                     </div>
-                    <div class="col-6">
+                    <div class="col-2">
+                        <div class="bg-body text-center p-3 rounded shadow-sm">
+                            <h3 class="mb-3">Rewards</h3> 
+                            <div class="d-flex justify-content-center align-items-center">
+                                <img src="../../image/assets/COMP.svg" alt="COMP" width="30">
+                                <div class="text-secondary fs-4 ps-2">22.43</div>
+                            </div>
+                        </div>  
+                    </div>                    
+                    <div class="col-5">
                         <div class="bg-body h-100 p-3 rounded shadow-sm">
                             <h2 class="mb-4">Liquidation risk</h2> 
                             <div class="d-flex flex-wrap justify-content-between">
                                 <div class="py-2" style="width: 46%;">
-                                    <p>ETH Market</p>
+                                    <p class="text-secondary">ETH Market</p>
                                     <div class="progress" role="progressbar" aria-label="Warning" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
                                         <div class="progress-bar progress-bar-striped bg-warning text-dark" style="width: 67%">67%</div>
                                     </div>
                                 </div>
                                 <div class="py-2" style="width: 46%;">
-                                    <p>USDC Market</p>
+                                    <p class="text-secondary">USDC Market</p>
                                     <div class="progress" role="progressbar" aria-label="Danger" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                                         <div class="progress-bar progress-bar-striped bg-danger" style="width: 85%">85%</div>
                                     </div>
@@ -98,7 +107,10 @@
                 <div class="row">
                     <div class="col-lg">
                         <div class="bg-body p-3 rounded shadow-sm">
-                            <h2 class="mb-4">Your borrowings</h2> 
+                            <div class="d-flex mb-4">
+                                <h2 class="me-auto">Your borrowings</h2> 
+                                <button type="button" class="btn btn-light">Collaterals : <span class="text-secondary">$800</span> <i class="bi bi-arrow-right"></i></button>    
+                            </div>
                             <table class="table align-middle">
                                 <thead>
                                   <tr>
