--- a/v3/dashboard/overview.4.html
+++ b/v3/dashboard/overview.4.html
@@ -66,8 +66,8 @@
                     <div class="col-6">
                         <div class="d-flex bg-body p-3 rounded shadow-sm">
                             <div class="flex-grow-1">
-                                <h1 class="display-5 fw-bold mb-3">Net worth</h1> 
-                                <div class="display-5 fw-bold text-body-tertiary" style="--bs-text-opacity: .5;">$1000</div>
+                                <h1 class="display-5 fw-bold text-body-secondary mb-3">Net worth</h1> 
+                                <div class="display-5 fw-bold text-body-tertiary opacity-75" style="--bs-text-opacity: .5;">$1000</div>
                             </div> 
                             <div class="text-center">
                                 <div class="mb-4">
