--- a/v3/dashboard/overview.4.html
+++ b/v3/dashboard/overview.4.html
@@ -65,17 +65,17 @@
                 <div class="row mb-4">
                     <div class="col-6">
                         <div class="d-flex bg-body p-3 rounded shadow-sm">
-                            <div class="flex-grow-1">
-                                <h1 class="display-5 fw-bold text-body-secondary mb-3">Net worth</h1> 
-                                <div class="display-5 fw-bold text-body-tertiary opacity-75" style="--bs-text-opacity: .5;">$1000</div>
+                            <div class="flex-grow-1 text-center">
+                                <h1 class="fw-bold text-body-secondary mb-3">Net worth</h1> 
+                                <div class="display-5 fw-bold text-body-tertiary opacity-75">$1543</div>
                             </div> 
                             <div class="text-center">
                                 <div class="mb-4">
-                                    <h4>Net APR</h4> 
+                                    <h5>Net APR</h5> 
                                     <div class="text-body-tertiary fs-5">7.39%</div>
                                 </div>  
                                 <div>
-                                    <h4 class="">Rewards</h4> 
+                                    <h5>Rewards</h5> 
                                     <div class="d-flex justify-content-center align-items-center">
                                         <img src="../../image/assets/COMP.svg" alt="COMP" width="25">
                                         <div class="text-body-tertiary fs-5 ps-2">22.43</div>
