Update dashboard infos

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <li><a href="v3/dashboard/overview.2.html">Overview #2</a></li>
               <li><a href="v3/dashboard/overview.3.html">Overview #3</a></li>
               <li><a href="v3/dashboard/overview.4.html">Overview #4</a></li>
+              <li><a href="v3/dashboard/overview.5.html">Overview #5</a></li>
             </ul>
           </li>
         </ul>
