--- a/v3/dashboard/overview.4.html
+++ b/v3/dashboard/overview.4.html
@@ -64,10 +64,10 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row mb-4">
                     <div class="col-6">
-                        <div class="d-flex bg-body p-3 rounded shadow-sm">
+                        <div class="d-flex align-items-center bg-body p-3 rounded shadow-sm">
                             <div class="flex-grow-1 text-center">
                                 <h1 class="fw-bold text-body-secondary mb-3">Net worth</h1> 
-                                <div class="display-5 fw-bold text-body-tertiary opacity-75">$1543</div>
+                                <h1 class="fw-bold text-body-tertiary opacity-75">$1543</h1>
                             </div> 
                             <div class="text-center">
                                 <div class="mb-4">
