--- a/v3/dashboard/overview.5.html
+++ b/v3/dashboard/overview.5.html
@@ -48,8 +48,8 @@
                     <hr class="my-4 text-primary">
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li class="nav-item"><a class="nav-link" href="#/"><i class="bi bi-box-arrow-down me-1"></i> Borrow</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="#/lend"><i class="bi bi-stars me-1"></i> Lend</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#/claim"><i class="bi bi-suit-heart me-1"></i> Claim</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="#/lend"><i class="bi bi-flower2 me-1"></i> Lend</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#/claim"><i class="bi bi-gift me-1"></i> Claim</a></li>
                         <li class="nav-item"><a class="nav-link active" href="#/dashboard"><i class="bi bi-list-task me-1"></i> Dashboard</a></li>
                     </ul>
                     <hr class="text-primary">
@@ -64,12 +64,12 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row mb-4">
                     <div class="col-6">
-                        <div class="d-flex bg-body p-3 rounded shadow-sm">
+                        <div class="d-flex align-items-center bg-body p-3 rounded shadow-sm">
                             <div class="flex-grow-1 text-center">
                                 <h1 class="fw-bold text-body-secondary mb-3">Net worth</h1> 
-                                <div class="display-5 fw-bold text-body-tertiary opacity-75">$1543</div>
+                                <h1 class="fw-bold text-body-tertiary opacity-75">$1543</h1>
                             </div> 
-                            <div class="text-center ms-4 me-5">
+                            <div class="text-center ms-5 me-4">
                                 <div class="mb-4">
                                     <h5>Borrows</h5> 
                                     <div class="text-body-tertiary fs-5">$6748</div>
