--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.html">Borrow</a></li>
+              <li><a href="v3/borrow/borrow.1.html">Borrow #1</a></li>
+              <li><a href="v3/borrow/borrow.2.html">Borrow #2</a></li>
             </ul>
           </li>
         </ul>
@@ -27,7 +28,7 @@
         <ul>
           <li>Lend
             <ul>
-              <li><a href="v3/lend/assets-list.html">Assets list</a></li>
+              <li><a href="v3/lend/assets-list.html">Assets list #1</a></li>
               <li><a href="v3/lend/assets-list.2.html">Assets list #2</a></li>
               <li>Lend asset</li>
             </ul>
