--- a/v3/borrow/borrow.2.html
+++ b/v3/borrow/borrow.2.html
@@ -68,9 +68,31 @@
                     <div class="col-12 col-lg-8 col-xxl-6">
                         <div class="bg-body p-3 rounded shadow mb-4">
                             <h2 class="mb-4">Borrow</h2>
-                            <div class="d-flex border p-4 rounded">
-                                0
+                            <div class="d-flex p-4 mb-1 bg-light border border-light-subtle rounded">
+                                <div class="flex-grow-1">
+                                    <h1>0</h1>
+                                    <div  class="text-secondary">$0.00</div>
+                                </div>
+                                <div>
+                                    <button type="button" class="btn btn-lg btn-light bg-white rounded-4 mb-2">
+                                        <div class="d-flex align-items-center">
+                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="40"> 
+                                            <span class="px-3">USDC</span> 
+                                            <i class="bi bi-chevron-down"></i>
+                                        </div>
+                                    </button>
+                                    <div class="text-center small text-secondary">
+                                        Borrow APR : 4.12%
+                                    </div>
+                                </div>
                             </div>
+                            <div class="d-flex justify-content-between mb-4">
+                                <div>Emprunt maximal : <span class="text-body-secondary">800 USDC</span></div>
+                                <div><a href="#" class="text-decoration-none">Augmenter votre capacité d'emprunt <i class="bi bi-arrow-right"></i></a></div>
+                            </div>
+                            <div class="d-grid">
+                                <button class="btn btn-lg btn-primary text-white" type="button">Borrow USDC</button>
+                              </div>
                         </div>
                     </div>
                 </div>
