Borrow page update

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ul>
               <li><a href="v3/borrow/borrow.1.html">Borrow #1</a></li>
               <li><a href="v3/borrow/borrow.2.html">Borrow #2</a></li>
+              <li><a href="v3/borrow/borrow.3.html">Borrow #3</a></li>
             </ul>
           </li>
         </ul>
