Borrow page update

--- a/v3/borrow/borrow.3.html
+++ b/v3/borrow/borrow.3.html
@@ -86,8 +86,8 @@
                                     <div class="mb-1">Emprunt maximal : <span class="text-body-tertiary">800 USDC</span></div>
                                     <small><a href="#" class="text-decoration-none">Augmenter votre capacité d'emprunt</a></small>
                                 </div>
-                                <div class="mt-1">
-                                    <small class="bg-body-tertiary px-2 py-1 border rounded">Borrow APR : <span class="text-body-tertiary">4.12%</span></small>
+                                <div class="d-flex flex-wrap align-items-start">
+                                    <small class="bg-body-tertiary px-2 py-1 me-1 border rounded">Borrow APR : <span class="text-body-tertiary">4.12%</span></small>
                                     <small class="bg-body-tertiary px-2 py-1 border rounded">Loan to value : <span class="text-body-tertiary">12%</span></small>
                                 </div>
                             </div>
