Select borrow asset

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.1.html">Borrow #1</a></li>
-              <li><a href="v3/borrow/borrow.2.html">Borrow #2</a></li>
-              <li><a href="v3/borrow/borrow.3.html">Borrow #3</a></li>
+              <li><a href="v3/borrow/borrow.html">Main #1</a></li>
+              <li><a href="v3/borrow/borrow.2.html">Main #2</a></li>
+              <li><a href="v3/borrow/select-asset.html">Select asset #1</a></li>
+              <li><a href="v3/borrow/select-asset.2.html">Select asset #2</a></li>
             </ul>
           </li>
         </ul>
