--- a/v3/borrow/borrow.html
+++ b/v3/borrow/borrow.html
@@ -84,10 +84,11 @@
                             <div class="d-flex flex-wrap justify-content-between mb-4">
                                 <div>
                                     <div class="mb-1">Emprunt maximal : <span class="text-body-tertiary">800 USDC</span></div>
-                                    <a href="#" class="text-decoration-none">Augmenter votre capacité d'emprunt <i class="bi bi-arrow-right"></i></a>
+                                    <small><a href="#" class="text-decoration-none">Augmenter votre capacité d'emprunt</a></small>
                                 </div>
-                                <div class="d-flex align-items-start">
+                                <div class="d-flex flex-wrap align-items-start">
                                     <small class="bg-body-tertiary px-2 py-1 me-1 border rounded">Borrow APR : <span class="text-body-tertiary">4.12%</span></small>
+                                    <small class="bg-body-tertiary px-2 py-1 border rounded">Loan to value : <span class="text-body-tertiary">12%</span></small>
                                 </div>
                             </div>
                             <div class="d-grid">
