--- a/v3/borrow/select-asset.html
+++ b/v3/borrow/select-asset.html
@@ -65,34 +65,65 @@
             </div>
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
-                    <div class="col-12 col-lg-8 col-xxl-6">
+                    <div class="col-12 col-lg-4">
                         <div class="bg-body p-3 rounded shadow mb-4">
-                            <h2 class="mb-4">Borrow</h2>
-                            <div class="d-flex border p-4 rounded mb-1">
-                                <div class="flex-grow-1">
-                                    <h1>0</h1>
-                                    <div  class="text-body-secondary">$0.00</div>
-                                </div>
+                            <div class="d-flex align-items-center mb-4">
+                                <h2 class="me-auto">Select asset</h2>
+                                <button type="button" class="btn-close" aria-label="Close"></button>
+                            </div>
+
+                            <div class="mb-3">
+
                                 <div>
-                                    <button type="button" class="btn btn-lg btn-light rounded-4 mb-2">
-                                        <div class="d-flex align-items-center">
-                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="40"> 
-                                            <span class="px-3">USDC</span> 
-                                            <i class="bi bi-chevron-down"></i>
+                                    <div class="d-flex justify-content-between align-items-center mb-3">
+                                        <div class="d-flex justify-content-start">
+                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
+                                            <div class="ps-2">
+                                                <div>USDC</div>
+                                                <small class="text-body-tertiary">USD Coin</small>
+                                            </div>
                                         </div>
-                                    </button>
-                                    <div class="text-center small text-body-secondary">
-                                        Borrow APR : 4.12%
+                                        <div>
+                                            <div>Borrow APR</div> 
+                                            <div class="text-body-tertiary">7.39%</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="text-center small">
+                                        <div class="mb-1">Collaterals</div>
+                                        <div class="text-body-tertiary">
+                                            WBTC <strong class="px-1">·</strong> ETH <strong class="px-1">·</strong> COMP <strong class="px-1">·</strong> UNI <strong class="px-1">·</strong> LINK
+                                        </div>
                                     </div>
                                 </div>
+
+                                <div class="border-bottom border-light-subtle my-4"></div>
+
+                                <div>
+                                    <div class="d-flex justify-content-between align-items-center mb-3">
+                                        <div class="d-flex justify-content-start">
+                                            <img src="../../image/assets/ETH.svg" alt="ETH" width="40">
+                                            <div class="ps-2">
+                                                <div>ETH</div>
+                                                <small class="text-body-tertiary">Ether</small>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div>Borrow APR</div> 
+                                            <div class="text-body-tertiary">7.39%</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="text-center small">
+                                        <div class="mb-1">Collaterals</div> 
+                                        <div class="text-body-tertiary">
+                                            wstETH <strong class="px-1">·</strong> cbETH
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
-                            <div class="d-flex justify-content-between mb-4">
-                                <div>Emprunt maximal : <span class="text-body-secondary">800 USDC <small class="text-body-tertiary">($800)</small></span></div>
-                                <div><a href="#">Augmenter votre capacité d'emprunt</a></div>
-                            </div>
-                            <div class="d-grid">
-                                <button class="btn btn-lg btn-primary text-white" type="button">Borrow USDC</button>
-                              </div>
+
                         </div>
                     </div>
                 </div>
@@ -100,6 +131,6 @@
         </div>
     </div>
 
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
