--- a/v3/borrow/select-asset.2.html
+++ b/v3/borrow/select-asset.2.html
@@ -89,11 +89,9 @@
                                         </div>
                                     </div>
 
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div>
-                                        <div class="text-body-tertiary">
-                                            WBTC <strong class="px-1">·</strong> ETH <strong class="px-1">·</strong> COMP <strong class="px-1">·</strong> UNI <strong class="px-1">·</strong> LINK
-                                        </div>
+                                    <div class="d-flex justify-content-center align-items-center text-body-secondary small">
+                                        <div class="me-1">Collaterals</div> 
+                                        <div class="text-body-tertiary" style="padding-top: 3px;"><i class="bi bi-caret-down-fill"></i></div>
                                     </div>
                                 </div>
 
@@ -114,11 +112,12 @@
                                         </div>
                                     </div>
 
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div> 
-                                        <div class="text-body-tertiary">
-                                            wstETH <strong class="px-1">·</strong> cbETH
-                                        </div>
+                                    <div class="d-flex justify-content-center align-items-center text-body-secondary small">
+                                        <div class="me-1">Collaterals</div> 
+                                        <div class="text-body-tertiary" style="padding-top: 3px;"><i class="bi bi-caret-up-fill"></i></div>
+                                    </div>
+                                    <div class="text-center text-body-tertiary small pt-2">
+                                        WBTC <strong class="px-1">·</strong> ETH <strong class="px-1">·</strong> COMP <strong class="px-1">·</strong> UNI <strong class="px-1">·</strong> LINK
                                     </div>
                                 </div>
 
