--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
             <ul>
               <li><a href="v3/borrow/borrow.html">Main #1</a></li>
               <li><a href="v3/borrow/borrow.2.html">Main #2</a></li>
+              <li><a href="v3/borrow/borrow.3.html">Main #3</a></li>
+              <li><a href="v3/borrow/borrow.4.html">Main #4</a></li>
               <li><a href="v3/borrow/select-asset.html">Select asset #1</a></li>
               <li><a href="v3/borrow/select-asset.2.html">Select asset #2</a></li>
+              <li><a href="v3/borrow/select-asset.3.html">Select asset #3</a></li>
+              <li><a href="v3/borrow/select-asset.4.html">Select asset #4</a></li>
+              <li><a href="v3/borrow/collateral.html">Manage collateral #1</a></li>
             </ul>
           </li>
         </ul>
