--- a/v3/borrow/collateral.html
+++ b/v3/borrow/collateral.html
@@ -65,63 +65,62 @@
             </div>
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
-                    <div class="col-12 col-lg-5">
-                        <div class="bg-body p-3 rounded shadow mb-4">
-                            <div class="d-flex align-items-center mb-4">
-                                <h2 class="me-auto">Select asset</h2>
+                    <div class="col-12 col-lg-7 col-xxl-6">
+                        <div class="bg-body p-3 pb-4 rounded shadow">
+                            <div class="d-flex align-items-center">
+                                <h2 class="mb-1 me-auto">Collateral</h2>
                                 <button type="button" class="btn-close" aria-label="Close"></button>
                             </div>
+                            <div class="text-body-tertiary fs-5 mb-4">ETH Market</div>
 
-                            <div class="mb-2">
-
-                                <div class="bg-body-tertiary rounded p-3">
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div class="d-flex justify-content-start">
-                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
-                                            <div class="ps-2">
-                                                <div>USDC</div>
-                                                <small class="text-body-tertiary">USD Coin</small>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <div>Borrow APR</div> 
-                                            <div class="text-body-tertiary text-center">7.39%</div>
+                            <div class="shadow rounded p-3 mb-4">
+                                <div class="d-flex justify-content-between align-items-center mb-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <img src="../../image/assets/wstETH.svg" alt="USDC" width="40">
+                                        <div class="ps-2">
+                                            <div>wstETH</div>
+                                            <small class="text-body-tertiary">Lido wrapped staked ether</small>
                                         </div>
                                     </div>
-
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div>
-                                        <div class="text-body-tertiary">
-                                            WBTC <strong class="px-1">·</strong> ETH <strong class="px-1">·</strong> COMP <strong class="px-1">·</strong> UNI <strong class="px-1">·</strong> LINK
-                                        </div>
+                                    <div class="text-center">
+                                        <div>Your balance</div> 
+                                        <div class="text-body-tertiary">2 <small class="ps-2 opacity-75">($3400)</small></div>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <button type="button" class="btn btn-primary text-white btn-sm mb-2">Deposit</button>
+                                        <button type="button" class="btn btn-primary text-white btn-sm">Withdraw</button>
                                     </div>
                                 </div>
+                                <div class="d-flex text-body-secondary text-center small">
+                                    <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
+                                    <div class="flex-fill border-end p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
+                                    <div class="flex-fill p-2">Liquidation penalty : <span class="opacity-75">10%</span></div>
+                                </div>
+                            </div>
 
-                                <div class="border-bottom border-light-subtle my-4"></div>
-
-                                <div  class="bg-body-tertiary rounded p-3">
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div class="d-flex justify-content-start">
-                                            <img src="../../image/assets/ETH.svg" alt="ETH" width="40">
-                                            <div class="ps-2">
-                                                <div>ETH</div>
-                                                <small class="text-body-tertiary">Ether</small>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <div>Borrow APR</div> 
-                                            <div class="text-body-tertiary text-center">7.39%</div>
+                            <div class="shadow rounded p-3">
+                                <div class="d-flex justify-content-between align-items-center mb-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <img src="../../image/assets/cbETH.svg" alt="USDC" width="40">
+                                        <div class="ps-2">
+                                            <div>cbETH</div>
+                                            <small class="text-body-tertiary">Coinbase wrapped staked ether</small>
                                         </div>
                                     </div>
-
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div> 
-                                        <div class="text-body-tertiary">
-                                            wstETH <strong class="px-1">·</strong> cbETH
-                                        </div>
+                                    <div class="text-center">
+                                        <div>Your balance</div> 
+                                        <div class="text-body-tertiary">0 <small class="opacity-75 ps-2">($0)</small></div>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <button type="button" class="btn btn-primary text-white btn-sm mb-2">Deposit</button>
+                                        <button type="button" class="btn btn-primary text-white btn-sm">Withdraw</button>
                                     </div>
                                 </div>
-
+                                <div class="d-flex text-body-secondary text-center small">
+                                    <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
+                                    <div class="flex-fill border-end p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
+                                    <div class="flex-fill p-2">Liquidation penalty : <span class="opacity-75">10%</span></div>
+                                </div>
                             </div>
 
                         </div>
