--- a/v3/borrow/select-asset.4.html
+++ b/v3/borrow/select-asset.4.html
@@ -74,7 +74,7 @@
 
                             <div class="mb-2">
 
-                                <div class="bg-body-tertiary rounded p-3">
+                                <div class="shadow rounded p-3">
                                     <div class="d-flex justify-content-between align-items-center mb-3">
                                         <div class="d-flex justify-content-start">
                                             <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
@@ -89,17 +89,15 @@
                                         </div>
                                     </div>
 
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div>
-                                        <div class="text-body-tertiary">
-                                            WBTC <strong class="px-1">·</strong> ETH <strong class="px-1">·</strong> COMP <strong class="px-1">·</strong> UNI <strong class="px-1">·</strong> LINK
-                                        </div>
+                                    <div class="d-flex justify-content-center align-items-center text-body-secondary small">
+                                        <div class="me-1">Collaterals</div> 
+                                        <div  class="text-body-tertiary" style="padding-top: 3px;"><i class="bi bi-caret-down-fill"></i></div>
                                     </div>
                                 </div>
 
                                 <div class="border-bottom border-light-subtle my-4"></div>
 
-                                <div  class="bg-body-tertiary rounded p-3">
+                                <div  class="shadow rounded p-3">
                                     <div class="d-flex justify-content-between align-items-center mb-3">
                                         <div class="d-flex justify-content-start">
                                             <img src="../../image/assets/ETH.svg" alt="ETH" width="40">
@@ -114,11 +112,9 @@
                                         </div>
                                     </div>
 
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div> 
-                                        <div class="text-body-tertiary">
-                                            wstETH <strong class="px-1">·</strong> cbETH
-                                        </div>
+                                    <div class="d-flex justify-content-center align-items-center text-body-secondary small">
+                                        <div class="me-1">Collaterals</div> 
+                                        <div class="text-body-tertiary" style="padding-top: 3px;"><i class="bi bi-caret-down-fill"></i></div>
                                     </div>
                                 </div>
 
